Изменены тесты, добавлен lombok.config, inline, сделаны более подходящие названия для методов интерфейса.