@@ -1,20 +1,16 @@
 package vyatsu.fileconverter.converters;
 
-import com.fasterxml.jackson.dataformat.xml.XmlMapper;
-import com.fasterxml.jackson.dataformat.xml.ser.ToXmlGenerator;
 import lombok.experimental.UtilityClass;
 import vyatsu.fileconverter.JsonStructure.NBAPlayersJson;
 import vyatsu.fileconverter.JsonStructure.Team;
 import vyatsu.fileconverter.XmlStructure.NBAPlayers;
 import vyatsu.fileconverter.XmlStructure.Player;
 
-import java.io.File;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @UtilityClass
 public class JsonToXmlConverter {
-    public List<Player> extractPlayers(final NBAPlayersJson nbaPlayersJson) {
+    private List<Player> extractPlayers(final NBAPlayersJson nbaPlayersJson) {
         return nbaPlayersJson.getTeams().stream()
                 .flatMap(teams -> {
                     Team team = teams.getTeam();
@@ -24,23 +20,13 @@ public class JsonToXmlConverter {
                         return player;
                     });
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public void convertToXml(final NBAPlayersJson nbaPlayersJson, final String fileName) {
-        List<Player> players = extractPlayers(nbaPlayersJson);
+    public NBAPlayers convertToXml(final NBAPlayersJson nbaPlayersJson) {
         NBAPlayers nbaPlayersXml = new NBAPlayers();
-        nbaPlayersXml.setPlayers(players);
-
-        XmlMapper xmlMapper = new XmlMapper();
-        xmlMapper.configure(ToXmlGenerator.Feature.WRITE_XML_DECLARATION, true);
-
-        try {
-            File file = new File(fileName);
-            xmlMapper.writerWithDefaultPrettyPrinter().writeValue(file, nbaPlayersXml);
-        } catch (Exception exception) {
-            exception.printStackTrace();
-        }
+        nbaPlayersXml.setPlayers(extractPlayers(nbaPlayersJson));
+        return nbaPlayersXml;
     }
 }
 
